--- a/Foxf1multiome-main.Rmd
+++ b/Foxf1multiome-main.Rmd
@@ -1,4 +1,14 @@
-library(Signac);library(Seurat);library(ensembldb);library(EnsDb.Mmusculus.v79);library(patchwork)
+# load required packages
+library(Signac);library(Seurat);library(ensembldb);library(EnsDb.Mmusculus.v79);library(patchwork);library(RColorBrewer);library(stringr)
+library(ChIPseeker);library("TxDb.Mmusculus.UCSC.mm10.knownGene");library("org.Mm.eg.db");library(BSgenome.Mmusculus.UCSC.mm10);
+library(EnsDb.Mmusculus.v79);library(JASPAR2020);library(TFBSTools);library(motifmatchr)
+
+
+
+
+
+
+
 set.seed(1234)
 counts <- Read10X_h5("~/filtered_feature_bc_matrix.h5")
 counts <- Read10X_h5("~/filtered_feature_bc_matrix.h5")
